src/test/ui/unboxed-closures/unboxed-closure-immutable-capture.stderr
error[E0594]: cannot assign to `x`, as it is not declared as mutable
  --> $DIR/unboxed-closure-immutable-capture.rs:9:13
   |
LL |     let x = 0;
   |         - help: consider changing this to be mutable: `mut x`
LL |     move || x = 1;
   |             ^^^^^ cannot assign

error[E0596]: cannot borrow `x` as mutable, as it is not declared as mutable
  --> $DIR/unboxed-closure-immutable-capture.rs:10:17
   |
LL |     let x = 0;
   |         - help: consider changing this to be mutable: `mut x`
LL |     move || x = 1;
LL |     move || set(&mut x);
   |                 ^^^^^^ cannot borrow as mutable

error[E0594]: cannot assign to `x`, as it is not declared as mutable
  --> $DIR/unboxed-closure-immutable-capture.rs:11:13
   |
LL |     let x = 0;
   |         - help: consider changing this to be mutable: `mut x`
...
LL |     move || x = 1;
   |             ^^^^^ cannot assign

error[E0596]: cannot borrow `x` as mutable, as it is not declared as mutable
  --> $DIR/unboxed-closure-immutable-capture.rs:12:17
   |
LL |     let x = 0;
   |         - help: consider changing this to be mutable: `mut x`
...
LL |     move || set(&mut x);
   |                 ^^^^^^ cannot borrow as mutable

error[E0594]: cannot assign to `x`, as it is not declared as mutable
  --> $DIR/unboxed-closure-immutable-capture.rs:13:8
   |
LL |     let x = 0;
   |         - help: consider changing this to be mutable: `mut x`
...
LL |     || x = 1;
   |        ^^^^^ cannot assign

error[E0596]: cannot borrow `x` as mutable, as it is not declared as mutable
  --> $DIR/unboxed-closure-immutable-capture.rs:14:12
   |
LL |     let x = 0;
   |         - help: consider changing this to be mutable: `mut x`
...
LL |     || set(&mut x);
   |            ^^^^^^ cannot borrow as mutable

error[E0594]: cannot assign to `x`, as it is not declared as mutable
  --> $DIR/unboxed-closure-immutable-capture.rs:15:8
   |
LL |     let x = 0;
   |         - help: consider changing this to be mutable: `mut x`
...
LL |     || x = 1;
   |        ^^^^^ cannot assign

error[E0596]: cannot borrow `x` as mutable, as it is not declared as mutable
  --> $DIR/unboxed-closure-immutable-capture.rs:16:12
   |
LL |     let x = 0;
   |         - help: consider changing this to be mutable: `mut x`
...
LL |     || set(&mut x);
   |            ^^^^^^ cannot borrow as mutable

error: aborting due to 8 previous errors

For more information about this error, try `rustc --explain E0596`.
